# mfmt

./: .gitmodules  CMakeLists.txt  LICENSE  statics.txt
aatls/include/: aatls.h
aatls/src/: aatls.c  aatls_arr.c  aatls_arr.h
mfmtio/include/: mfmtio.h
mfmtio/src/: mfmtio.c
msav/include/: msav.h  msav_blocks.h  msav_blocks_gen.h
msav/src/: msav.c  msav_arr.c  msav_arr.h  msav_blocks.c  msav_blocks_gen.c  msav_blocks_gen_priv.h  msav_object.c  msav_object.h  msav_stream.c  msav_stream.h  msav_zlib.c  msav_zlib.h
sample/msav/maps/: 0.msav  0.msav.decompressed
sample/msav/saves/: sector-serpulo-101.msav-backup.msav  sector-serpulo-108.msav-backup.msav  sector-serpulo-123.msav-backup.msav  sector-serpulo-129.msav  sector-serpulo-129.msav-backup.msav  sector-serpulo-130.msav-backup.msav  sector-serpulo-131.msav  sector-serpulo-131.msav-backup.msav  sector-serpulo-133.msav  sector-serpulo-133.msav-backup.msav  sector-serpulo-134.msav-backup.msav  sector-serpulo-142.msav  sector-serpulo-15.msav-backup.msav  sector-serpulo-164.msav  sector-serpulo-165.msav  sector-serpulo-165.msav-backup.msav  sector-serpulo-170.msav  sector-serpulo-18.msav-backup.msav  sector-serpulo-20.msav-backup.msav  sector-serpulo-21.msav-backup.msav  sector-serpulo-210.msav-backup.msav  sector-serpulo-213.msav  sector-serpulo-213.msav-backup.msav  sector-serpulo-216.msav-backup.msav  sector-serpulo-217.msav  sector-serpulo-217.msav-backup.msav  sector-serpulo-219.msav  sector-serpulo-221.msav  sector-serpulo-221.msav-backup.msav  sector-serpulo-223.msav  sector-serpulo-224.msav  sector-serpulo-224.msav-backup.msav  sector-serpulo-225.msav  sector-serpulo-225.msav-backup.msav  sector-serpulo-226.msav  sector-serpulo-226.msav-backup.msav  sector-serpulo-227.msav-backup.msav  sector-serpulo-228.msav  sector-serpulo-229.msav  sector-serpulo-229.msav-backup.msav  (+31 more)
sample/msav/schematics/: circle.msch  conveyor.msch  conveyor2.msch  repair .msch  repair.msch  turret-another.msch  turret-planet0.msch
sample/sprites/: sprites.aatls
tools/: CMakeLists.txt
tools/aatls-cli/src/: main.c
tools/blockdb/include/: bdb_arr.h  bdb_fs.h  bdb_log.h  bdb_ui.h  bdb_utils.h  gen_assign.h  gen_blocks.h  gen_cmd.h  gen_emit.h  gen_tree.h  gen_utils.h  gen_vars.h  generate.h  log.h  print_tree.h  utils.h
tools/blockdb/src/: bdb_arr.c  bdb_fs.c  bdb_ui.c  bdb_utils.c  gen_assign.c  gen_blocks.c  gen_cmd.c  gen_emit.c  gen_tree.c  gen_utils.c  gen_vars.c  generate.c  main.c  print_tree.c  utils.c
tools/msav-cli/src/: main.c
